Fix padding spacing on focus active in small view in accordion

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -65,7 +65,7 @@
       border: 0.2rem solid colors.$blue-state;
       color: colors.$blue-state;
       outline: none;
-      padding: 1.43rem;
+      padding: 1.44rem;
 
       @include breakpoints.medium {
         padding: 1.69rem 2.19rem;
